Misc Files .Net folder

--- a/.gitignore
+++ b/.gitignore
@@ -23238,3 +23238,16 @@ node_modules/tailwind-merge
 node_modules/tailwindcss
 node_modules/tailwindcss-animate
 node_modules/typescript
+.next/server/vendor-chunks/next-themes@0.4.4_react-dom@19.0.0_react@19.0.0__react@19.0.0.js
+.next/static/webpack/46983532d480ed7e.webpack.hot-update.json
+.next/static/webpack/6d5d3d673bd53a9f.webpack.hot-update.json
+.next/static/webpack/87bda5edbe7e76ba.webpack.hot-update.json
+.next/static/webpack/app/layout.46983532d480ed7e.hot-update.js
+.next/static/webpack/app/layout.6d5d3d673bd53a9f.hot-update.js
+.next/static/webpack/app/layout.87bda5edbe7e76ba.hot-update.js
+.next/static/webpack/app/layout.ea25bd4cdc1f69b4.hot-update.js
+.next/static/webpack/ea25bd4cdc1f69b4.webpack.hot-update.json
+.next/static/webpack/webpack.46983532d480ed7e.hot-update.js
+.next/static/webpack/webpack.6d5d3d673bd53a9f.hot-update.js
+.next/static/webpack/webpack.87bda5edbe7e76ba.hot-update.js
+.next/static/webpack/webpack.ea25bd4cdc1f69b4.hot-update.js
