Adding Header and Footer to the application

--- a/.gitignore
+++ b/.gitignore
@@ -23251,3 +23251,42 @@ node_modules/typescript
 .next/static/webpack/webpack.6d5d3d673bd53a9f.hot-update.js
 .next/static/webpack/webpack.87bda5edbe7e76ba.hot-update.js
 .next/static/webpack/webpack.ea25bd4cdc1f69b4.hot-update.js
+.next/static/webpack/1ad8d3ebafff88cb.webpack.hot-update.json
+.next/static/webpack/4cb97075f444cf91.webpack.hot-update.json
+.next/static/webpack/8eaeb3058403fc7f.webpack.hot-update.json
+.next/static/webpack/09fec1d501edb7f6.webpack.hot-update.json
+.next/static/webpack/91e6b6c8c4333d9c.webpack.hot-update.json
+.next/static/webpack/335dbe926a3de5cc.webpack.hot-update.json
+.next/static/webpack/882e3881e95644db.webpack.hot-update.json
+.next/static/webpack/8964b68c025aecaa.webpack.hot-update.json
+.next/static/webpack/169935a9d8704a76.webpack.hot-update.json
+.next/static/webpack/ab1a21f016356719.webpack.hot-update.json
+.next/static/webpack/f86423499e769f60.webpack.hot-update.json
+.next/static/webpack/fac59975afd01515.webpack.hot-update.json
+.next/static/webpack/feadd7ce2c2cec6b.webpack.hot-update.json
+.next/static/webpack/webpack.1ad8d3ebafff88cb.hot-update.js
+.next/static/webpack/webpack.4cb97075f444cf91.hot-update.js
+.next/static/webpack/webpack.8eaeb3058403fc7f.hot-update.js
+.next/static/webpack/webpack.09fec1d501edb7f6.hot-update.js
+.next/static/webpack/webpack.91e6b6c8c4333d9c.hot-update.js
+.next/static/webpack/webpack.335dbe926a3de5cc.hot-update.js
+.next/static/webpack/webpack.882e3881e95644db.hot-update.js
+.next/static/webpack/webpack.8964b68c025aecaa.hot-update.js
+.next/static/webpack/webpack.169935a9d8704a76.hot-update.js
+.next/static/webpack/webpack.ab1a21f016356719.hot-update.js
+.next/static/webpack/webpack.f86423499e769f60.hot-update.js
+.next/static/webpack/webpack.fac59975afd01515.hot-update.js
+.next/static/webpack/webpack.feadd7ce2c2cec6b.hot-update.js
+.next/static/webpack/app/layout.1ad8d3ebafff88cb.hot-update.js
+.next/static/webpack/app/layout.4cb97075f444cf91.hot-update.js
+.next/static/webpack/app/layout.8eaeb3058403fc7f.hot-update.js
+.next/static/webpack/app/layout.09fec1d501edb7f6.hot-update.js
+.next/static/webpack/app/layout.91e6b6c8c4333d9c.hot-update.js
+.next/static/webpack/app/layout.335dbe926a3de5cc.hot-update.js
+.next/static/webpack/app/layout.882e3881e95644db.hot-update.js
+.next/static/webpack/app/layout.8964b68c025aecaa.hot-update.js
+.next/static/webpack/app/layout.169935a9d8704a76.hot-update.js
+.next/static/webpack/app/layout.ab1a21f016356719.hot-update.js
+.next/static/webpack/app/layout.f86423499e769f60.hot-update.js
+.next/static/webpack/app/layout.fac59975afd01515.hot-update.js
+.next/static/webpack/app/layout.feadd7ce2c2cec6b.hot-update.js
