Working App Shall With Light Dark Theme

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
     "arrowParens": "avoid",
     "singleQuote": true,
     "jsxSingleQuote": true,
-    "tabwidth": 2,
+    "tabWidth": 2,
     "trailingComma": "none",
     "semi": false,
     "proseWrap": "always",
