--- a/.gitignore
+++ b/.gitignore
@@ -24379,3 +24379,11 @@ __azurite_db_blob__.json
 .next/app-build-manifest.json
 .next/static/webpack/9dd82c44110575db.webpack.hot-update.json
 .gitignore
+.next/static/webpack/32ddf53f71275378.webpack.hot-update.json
+.next/static/webpack/482403be7b8078b2.webpack.hot-update.json
+.next/static/webpack/7721a2233b4d6800.webpack.hot-update.json
+.next/static/webpack/app/layout.482403be7b8078b2.hot-update.js
+.next/static/webpack/app/layout.7721a2233b4d6800.hot-update.js
+.next/static/webpack/webpack.32ddf53f71275378.hot-update.js
+.next/static/webpack/webpack.482403be7b8078b2.hot-update.js
+.next/static/webpack/webpack.7721a2233b4d6800.hot-update.js
