--- a/.gitignore
+++ b/.gitignore
@@ -24387,3 +24387,5 @@ __azurite_db_blob__.json
 .next/static/webpack/webpack.32ddf53f71275378.hot-update.js
 .next/static/webpack/webpack.482403be7b8078b2.hot-update.js
 .next/static/webpack/webpack.7721a2233b4d6800.hot-update.js
+*.js
+*.json
