--- a/.gitignore
+++ b/.gitignore
@@ -24389,3 +24389,11 @@ __azurite_db_blob__.json
 .next/static/webpack/webpack.7721a2233b4d6800.hot-update.js
 *.js
 *.json
+.next/cache/images/d5FqqjEwa870R-2PLvFJWC7KGtAxTo8HBqnD7lpPyH4=/60.1742673352267.1dow-KtlppK5YshHZjeQgQ3LCzfgxQzygZGXwCPWW6g=.webp
+.next/cache/images/dPDI-ZyL1iO5DiS3Xdp3zCV1x6fDQipJdJoS2dWmKho=/60.1742673352162.vIUELuzvBH6Enc7ilOCrx-QZEyBBGRIr8mvbmZmxHZQ=.webp
+.next/cache/images/pviPJ+ImPJemG2GUCBu5-ouRgYSNfje4yR07YzogJ4w=/60.1742673339439.vIUELuzvBH6Enc7ilOCrx-QZEyBBGRIr8mvbmZmxHZQ=.webp
+.next/cache/images/uIl-Vf2kD5UNSSZUrwnsSzaSitpQQUNa0cOE3hOBqfA=/60.1742673339767.e8d6mlaFadYGmBkypquVr4NB0WX+CR2OzRu0fhMcCOQ=.webp
+.next/cache/webpack/client-development/1 2.gz_
+.next/cache/webpack/client-development/2 2.gz_
+.next/cache/webpack/server-development/13 2.gz_
+.next/cache/webpack/server-development/2 2.gz_
